--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,19 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.5.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }}
+
+allprojects {
+    repositories {
+        jcenter()
+    }}
+
 apply plugin: 'com.android.application'
 
 android {
@@ -23,6 +39,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-    compile project(':inappsdk')
+    compile 'com.cybersource:inappsdk:1.0.0'
     //compile project(':inappsdk-release')
 }
