--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-    compile project(':inappsdk')
-    //compile project(':inappsdk-release')
+    compile 'com.cybersource:inappsdk:+'
 }
